[package]
name = "midgarts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
byteorder = "1.4.3"
chrono = "0.4.23"
clippy = { version = "0.0.302", optional = true }
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
log = "0.4"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
yazi = "0.1.4"
